// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test "withErrorBoundaryRoot" wrapper component "fallbackRender" functionality rendered correctly 1`] = `
<div>
  fallbackRender functionality worked
</div>
`;

exports[`Test "withErrorBoundaryRoot" wrapper component Component rendered correctly 1`] = `
<div>
  test
</div>
`;
